--- a/style/style_client.css
+++ b/style/style_client.css
@@ -14,10 +14,13 @@ html, body {
 .bar-top {
 
     position: relative;
+    justify-content: flex-end;
+    justify-content: space-between;
+    flex-wrap: nowrap;
     display: flex;
     width: 100%;
     height: 55px;
-    align-items: center;
+
 
     background: #15CF74;
     border: 1px solid #000000;
@@ -59,6 +62,50 @@ html, body {
     height: 30px;
     margin-right: 20%;
 
+}
+
+.btn-deconnexion {
+
+    border-radius: 30px;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    padding-left: 45px;
+    padding-right: 45px;
+    color: whitesmoke;
+
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+.uil-shopping-bag {
+    border-radius: 30px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-left: 15px;
+    padding-right: 15px;
+    font-size: 32px;
+    color: whitesmoke;
+}
+
+.rate {
+    display: block;
+    bottom: 0;
+}
+
+.btn-type-client {
+    display: flex;
+    align-items:center;
+}
+
+
+.btn-deconnexion:hover, .uil-shopping-bag:hover {
+    background: rgba(25, 151, 87, 1);
+    cursor: pointer;
 }
 
 .github-icon {
@@ -114,6 +161,24 @@ html, body {
 
 .text-product {
     margin-top: 1.2%;
+}
+
+/* panier.php */
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+td, th {
+    text-align: left;
+}
+
+td {
+    height: 100px;
+}
+
+.rowtotal {
+    text-align: right;
 }
 
 
