--- a/style/style_client.css
+++ b/style/style_client.css
@@ -194,13 +194,16 @@ tr:nth-child(even) {
 /* Logo bar tools */
 
 .logoSpeedCash {
-    width: 8.9%;
+    width: 210px;
+    height: 50px;
+    margin-bottom: 8px;
 }
+
 
 .container-thumbnail {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
+    justify-content: center;
     margin-bottom: 2%;
     flex: 1 0 auto;
 }
@@ -214,10 +217,7 @@ tr:nth-child(even) {
 .thumbnail {
     background: rgba(50, 50, 50, 1);
     display: flex;
-    flex-basis: auto;
-    flex-shrink: 1;
-    flex-grow: 1;
-    width: 25%;
+    width: 480px;
     border-radius: 8px;
     margin-top: 1%;
     padding: 1%;
@@ -273,6 +273,34 @@ tr:nth-child(even) {
     background-color: var(--main-icons-color);
 }
 
+.filter-products-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.select-filter {
+    margin-left: 1%;
+}
+
+.uil-tag-alt {
+    font-size: 28px;
+    margin-left: 20%;
+    width: auto;
+    text-align: center;
+    color: white;
+    background-color: var(--main-icons-color);
+    padding: 4px 8px;
+    border-radius: 8px;
+}
+
+
+.filter-products-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .uil-shopping-cart:hover::before {
     background-color: #109454;
     cursor: pointer;
@@ -320,62 +348,4 @@ td {
     text-align: center;
     border-radius: 8px;
 
-}
-
-
-footer {
-    position: relative;
-    background-color: var(--footer-dark-color);
-    color: white;
-    width: 100%;
-    flex-shrink: 0;
-}
-
-.footer-container {
-    width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    font-size: 16px;
-    padding: 50px 0 100px;
-}
-
-.bloc {
-    width: 25%;
-    margin: 0 30px;
-}
-
-/* bloc contact footer */
-
-.footer-contact h3, .footer-services h3, .footer-social h3 {
-    font-size: 20px;
-    padding-bottom: 20px;
-}
-
-.footer-contact p {
-    padding: 5px 0;
-}
-
-/* bloc services footer */
-
-.services-list, .social-list {
-    list-style-type: none;
-}
-
-.services-list li {
-    padding: 2px 0;
-}
-
-.services-list a {
-    text-decoration: none;
-    color: whitesmoke;
-}
-
-.services-list a:hover {
-    color: #15CF74;
-}
-
-.footer-icon-discord, .footer-icon-github, .footer-icon-instagram, .footer-icon-tiktok {
-    width: 20px;
 }
